--- a/todo.html
+++ b/todo.html
@@ -90,7 +90,7 @@
                 <div class = "middle-column" id = "middle-column">
                     <div div class = "task-bar-container">
                         <div class = "task-bar">
-                            <span id = "task-name"> Task </span>
+                            <div id = "task-name"> Task </div>
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
                         <button class = "share-button">
@@ -117,7 +117,8 @@
                 <div class = "right-column" id = "right-column">
                     <div class = "sub-task-info">
                         <div id = "sub-task">
-                            <input type = "checkbox"/>
+                            <span id = "strike">
+                            </span>
                             <div id = "sub-task-name"></div>
                             <i class = "fa fa-star-o"></i>
                         </div>
