--- a/todo.html
+++ b/todo.html
@@ -2,8 +2,7 @@
     <head>
         <title>TODO</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <link rel = "stylesheet" href = "todo.css">
-        <link rel = "stylesheet" href = "checkbox.css">
+        <link rel = "stylesheet" href = "css/todo.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -158,7 +157,7 @@
                 </div>
             </div>
         </div>
-        <script src = "todo.js"></script>
+        <script src = "js/todo.js"></script>
     </body>
 </html>
             
