changes in js file

--- a/todo.html
+++ b/todo.html
@@ -76,6 +76,7 @@
                     <div id = "plus-icon">
                         <span id = "plus-symbol"></span>
                         <input type = "text" id = "new-list" placeholder = "New list" class = "menu-name"/>
+                        <span id = "group-symbol"></span> 
                     </div>
                 </div>
                 <div class = "middle-column" id = "middle-column">
