JQuery added code

--- a/todo.html
+++ b/todo.html
@@ -151,6 +151,7 @@
                 </div>
             </div>
         </div>
+        <script src = "js/jquery-3.4.1.min.js"></script>
         <script src = "js/todo.js"></script>
     </body>
 </html>
